After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 761762 - Misaligned labels
Misaligned labels
Status: RESOLVED FIXED
Product: gnome-control-center
Classification: Core
Component: Mouse
unspecified
Other Linux
: Normal normal
: ---
Assigned To: Felipe Borges
Control-Center Maintainers
Depends on:
Blocks:
 
 
Reported: 2016-02-09 12:21 UTC by Allan Day
Modified: 2016-02-10 10:14 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Screenshot (2.00 MB, image/png)
2016-02-09 12:21 UTC, Allan Day
  Details
mouse: fix panel labels alignment (14.20 KB, patch)
2016-02-09 15:06 UTC, Felipe Borges
committed Details | Review
Screenshot AFTER patch (40.21 KB, image/png)
2016-02-09 15:07 UTC, Felipe Borges
  Details

Description Allan Day 2016-02-09 12:21:32 UTC
Created attachment 320704 [details]
Screenshot

Testing 3.19.x with GNOME Continuous from four days ago: some of the panel labels are quite obviously misaligned. See in particular: mouse speed, touchpad, touchpad speed, and tap to click.

See the attached screenshot to get a better idea.
Comment 1 Felipe Borges 2016-02-09 15:06:42 UTC
Created attachment 320719 [details] [review]
mouse: fix panel labels alignment
Comment 2 Felipe Borges 2016-02-09 15:07:25 UTC
Created attachment 320720 [details]
Screenshot AFTER patch
Comment 3 Allan Day 2016-02-09 15:13:36 UTC
(In reply to Felipe Borges from comment #2)
> Created attachment 320720 [details]
> Screenshot AFTER patch

Looks great, thanks Felipe!
Comment 4 Rui Matos 2016-02-09 18:34:53 UTC
Review of attachment 320719 [details] [review]:

Looks good, but please mention the shadow type changes in the commit message too
Comment 5 Felipe Borges 2016-02-10 10:14:31 UTC
Attachment 320719 [details] pushed as 1ea4452 - mouse: fix panel labels alignment