mouse: fix panel labels alignment

Also removed shadow_type duplicates on GtkFrames UI file.

https://bugzilla.gnome.org/show_bug.cgi?id=761762